added WSL copy-paste support and proper handling of ANSI color codes to terminal config

--- a/emacs/config.org
+++ b/emacs/config.org
@@ -4058,12 +4058,14 @@ This uses `default-text-scale-increment' under the hood, and enlargens the font 
 
 * =init-terminal.el=
 ** Extras
+*** Julia
 #+name: el-pkg-julia-mode-v2--simple
 #+begin_src emacs-lisp :tangle no
 ;; Julia
 (use-package julia-mode)
 #+end_src
 
+*** Python
 #+name: el-python-v2--simple
 #+begin_src emacs-lisp
 ;; Python
@@ -4076,6 +4078,7 @@ This uses `default-text-scale-increment' under the hood, and enlargens the font 
              :repo "jorgenschaefer/pyvenv"))
 #+end_src
 
+*** LSP
 #+name: el-pkg-lsp-v2--simple
 #+begin_src emacs-lisp
 (use-package lsp-mode
@@ -4095,6 +4098,7 @@ This uses `default-text-scale-increment' under the hood, and enlargens the font 
                           (lsp))))  ; or lsp-deferred
 #+end_src
 
+*** Org
 #+name: el-pkg-org-v2--simple
 #+begin_src emacs-lisp :tangle no
 (use-package org
@@ -4259,9 +4263,12 @@ This uses `default-text-scale-increment' under the hood, and enlargens the font 
                   ("convert -density %D -trim -antialias %f -quality 100 %O")))))
 #+end_src
 
-l** Final
+*** OS handling
+** Final
 
 #+begin_src emacs-lisp :noweb yes :tangle init-terminal.el
+<<el-basic-utility-functions>>
+
 <<el-basic-variables-v2>>
 
 <<el-backup-v2>>
@@ -4273,6 +4280,8 @@ l** Final
 ;; Style
 (use-package darktooth-theme)
 (load-theme 'darktooth t)
+
+<<el-wsl-copy-paste>>
 
 <<el-pkg-helm-v2>>
 
@@ -4311,6 +4320,8 @@ l** Final
 <<el-pkg-lsp-v2--simple>>
 
 <<el-pkg-org-v2--simple>>
+
+<<el-ansi-color-codes-handling>>
 #+end_src
 
 #+RESULTS:
